--- a/style/seedsource.scss
+++ b/style/seedsource.scss
@@ -177,14 +177,18 @@ $icons: eye eye-closed crop contrast save load file trash clock chevron-top chev
 }
 
 .badge {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
-  padding: 3px 7px;
+  padding: 3px 9px;
   background-color: #777;
   color: #fff;
   font-weight: bold !important;
   font-size: 0.75rem !important;
   vertical-align: middle;
   font-family: $family-strong;
+  margin-right: 10px;
 }
 
 .is-loading {
@@ -296,7 +300,7 @@ $icons: eye eye-closed crop contrast save load file trash clock chevron-top chev
 }
 
 .configuration-step .step-content {
-  margin: 10px 0px 0px 25px;
+  margin: 10px 0px 0px 35px;
 }
 
 .constraint-arrow {
