Fix “plot seedlots/planting sites” label

--- a/style/seedsource.scss
+++ b/style/seedsource.scss
@@ -129,6 +129,11 @@ button.is-link {
   }
 }
 
+.pre {
+  font-family: Verdana sans-serif;
+  color: maroon;
+}
+
 .navbar {
   position: fixed;
   width: 100%;
