--- a/style/seedsource.scss
+++ b/style/seedsource.scss
@@ -17,7 +17,7 @@
   }
 }
 
-$image-path: '../../seedsource-core/javascript/images';
+$image-path: '../images';
 $header-height: 52px;
 $family-strong: "Arial Black", "Arial Bold", Gadget, sans-serif;
 $tab-header-height: 58px;
