--- a/style/seedsource.scss
+++ b/style/seedsource.scss
@@ -63,6 +63,17 @@ $icons: eye eye-closed crop contrast save load file trash clock chevron-top chev
   }
 }
 
+.button.is-plain {
+  padding: 0;
+  border: 0;
+  background: transparent;
+  color: $primary;
+
+  &:hover {
+    color: $grey-dark;
+  }
+}
+
 /* IE fixes */
 @include tablet {
   .modal-card {
@@ -94,14 +105,6 @@ button.is-link {
   &:hover {
     color: $primary;
   }
-}
-
-.table th {
-  vertical-align: bottom;
-}
-
-.table td {
-  padding: .5em .5em;
 }
 
 .hr-label {
@@ -511,11 +514,62 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
   }
 }
 
-.map-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+.column.map {
+  display: flex;
+  flex-direction: column;
+
+  .map-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    flex-grow: 1;
+  }
+
+  .comparisons {
+    height: 60px;
+    background-color: white;
+    overflow: hidden;
+
+    &.active {
+      height: 67%;
+    }
+
+    .expand-button {
+      display: block;
+      border: 0;
+      height: 60px;
+      background: linear-gradient($black-bis, $grey-darker);
+      font-size: $size-5;
+      font-weight: bold;
+      color: white;
+      font-family: $family-primary;
+      text-align: center;
+      width: 100%;
+      cursor: pointer;
+
+      .expand-message {
+        font-size: $size-6;
+        font-weight: normal;
+      }
+    }
+
+    .scroll-table {
+      max-height: calc(100% - 60px);
+      overflow-y: scroll;
+    }
+
+    .table {
+      width: 100%;
+      height: 100%;
+
+      thead th {
+        position: sticky;
+        top: 0;
+        background: white;
+      }
+    }
+  }
 }
 
 .time-overlay {
