--- a/style/seedsource.scss
+++ b/style/seedsource.scss
@@ -514,15 +514,18 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
   }
 }
 
+.map-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
 .column.map {
   display: flex;
   flex-direction: column;
 
   .map-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
     flex-grow: 1;
   }
 
