--- a/style/seedsource.scss
+++ b/style/seedsource.scss
@@ -754,3 +754,47 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
 .report-preview .modal-card-foot {
   justify-content: flex-end;
 }
+
+@keyframes growAnimation {
+    0% {
+        transform: scale(1)
+    }
+    100% {
+        transform: scale(1.08)
+     }
+}
+
+@keyframes expandAnimation {
+    0% {
+        transform: scaleY(0)
+    }
+    100% {
+        transform: scaleY(1)
+     }
+}
+
+.color-picker {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 25px;
+  overflow:hidden;
+  animation: expandAnimation ease 0.1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+
+  .color {
+    height: 40px;
+    width: 40px;
+    border-radius: 100%;
+    margin: 4px;
+  }
+
+  .color:hover, .color:focus {
+    animation: growAnimation ease 0.1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+  }
+}
+
+
