--- a/style/seedsource.scss
+++ b/style/seedsource.scss
@@ -755,15 +755,6 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
   justify-content: flex-end;
 }
 
-@keyframes growAnimation {
-    0% {
-        transform: scale(1)
-    }
-    100% {
-        transform: scale(1.08)
-     }
-}
-
 @keyframes expandAnimation {
     0% {
         transform: scaleY(0)
@@ -778,7 +769,6 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
   display: flex;
   justify-content: space-between;
   margin-top: 25px;
-  overflow:hidden;
   animation: expandAnimation ease 0.1s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
@@ -788,12 +778,18 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
     width: 40px;
     border-radius: 100%;
     margin: 4px;
+
+    &:first-child {
+      margin-left: 0;
+    }
+    &:last-child {
+      margin-right: 0;
+    }
   }
 
   .color:hover, .color:focus {
-    animation: growAnimation ease 0.1s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
+    transform: scale(1.08);
+    transition: transform 0.1s ease-in-out;
   }
 }
 
