--- a/style/seedsource.scss
+++ b/style/seedsource.scss
@@ -694,7 +694,7 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
 }
 
 .leaflet-default-icon-path {
-  background-image: url(/images/marker-icon.png);
+  background-image: url(~seedsource-ui/images/marker-icon.png);
 }
 
 .leaflet-container.crosshair {
