Add custom functions to front end

--- a/style/seedsource.scss
+++ b/style/seedsource.scss
@@ -37,7 +37,7 @@ $spacings: 5 10 15;
 }
 
 $icon-sizes: 12 16 18;
-$icons: eye eye-closed crop contrast save load file trash clock chevron-top chevron-bottom share;
+$icons: eye eye-closed crop contrast save load file trash clock chevron-top chevron-bottom share more;
 
 @each $icon in $icons {
   @each $size in $icon-sizes {
@@ -858,6 +858,32 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
   .color:hover, .color:focus {
     transform: scale(1.08);
     transition: transform 0.1s ease-in-out;
+  }
+}
+
+.custom-function-modal {
+  label {
+    line-height: 32px;
+  }
+
+  input, textarea {
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  textarea {
+    height: 160px;
+  }
+
+  input {
+    height: 28px;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
 }
 
