--- a/style/seedsource.scss
+++ b/style/seedsource.scss
@@ -868,8 +868,10 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
 
   input, textarea {
     display: block;
+    padding: 5px;
     width: 100%;
     margin-bottom: 20px;
+    font-size: 16px;
   }
 
   textarea {
@@ -885,6 +887,10 @@ tr.visible .visibility-toggle, .visibility-toggle:hover {
     justify-content: space-between;
     width: 100%;
   }
+}
+
+.error {
+  color: red;
 }
 
 
