--- a/style/seedsource.scss
+++ b/style/seedsource.scss
@@ -37,7 +37,7 @@ $spacings: 5 10 15;
 }
 
 $icon-sizes: 12 16 18;
-$icons: eye eye-closed crop contrast save load file trash clock chevron-top chevron-bottom share more;
+$icons: eye eye-closed crop contrast save load file trash clock chevron-top chevron-bottom share pencil;
 
 @each $icon in $icons {
   @each $size in $icon-sizes {
